fix(bsky): jump to top button

--- a/styles/bsky/catppuccin.user.less
+++ b/styles/bsky/catppuccin.user.less
@@ -592,8 +592,11 @@
       stroke: @surface1 !important;
     }
 
-    /* load new posts button */
-    button[style*="border-color: rgb(46, 64, 82); background-color: rgb(21, 52, 85)"] {
+    /* load new posts button (border: [contrast_100]; bg: [primary_50]) */
+    button[style*="border-color: rgb(35, 46, 62); background-color: rgb(0, 30, 71)"], // dark
+    button[style*="border-color: rgb(44, 58, 78); background-color: rgb(18, 41, 73)"], // dim
+    button[style*="border-color: rgb(220, 226, 234); background-color: rgb(229, 240, 255)"] // light
+    {
       background-color: @surface0 !important;
       border-color: @overlay0 !important;
     }
